[gd_scene load_steps=2 format=2]

[ext_resource path="res://tool/WaveDesigner/ElementConnector.gd" type="Script" id=1]

[node name="ElementConnector" type="Line2D"]
default_color = Color( 1, 0.666667, 0.368627, 1 )
script = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_right = 68.0
margin_bottom = 48.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 67.0
margin_bottom = 41.0

[node name="HSlider" type="HSlider" parent="PanelContainer/VBoxContainer"]
margin_right = 60.0
margin_bottom = 16.0
rect_min_size = Vector2( 60, 0 )
focus_mode = 0
max_value = 4.0
value = 2.0
tick_count = 5
ticks_on_borders = true

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 20.0
margin_right = 60.0
margin_bottom = 34.0

[node name="Label1" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer"]
margin_right = 28.0
margin_bottom = 14.0
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 32.0
margin_right = 60.0
margin_bottom = 14.0
size_flags_horizontal = 3
align = 2

[connection signal="value_changed" from="PanelContainer/VBoxContainer/HSlider" to="." method="_on_HSlider_value_changed"]
